# Engine

./: .gitignore  Engine.Display.csproj  Engine.sln  README.md  log.txt
C#/: Engine.sln
C#/Engine.Core/: Color.cs  Engine.Core.csproj  IParticleHandler.cs  LCS3ElementGroup.cs  Particle.cs  Tag.cs  packages.config
C#/Engine.Forms/: Engine.Forms.csproj  Program.cs
C#/Engine.Rendering/: Enums.cs  RenderImage.cs  RenderPoint.cs  RenderTexture.cs
C#/Engine.WPF/: App.xaml  App.xaml.cs  Color.cs  Engine.WPF.csproj  (+5 more)
Engine/: CMakeLists.txt  Engine.Core.csproj  Engine.cpp  Engine.csproj  Engine.h  Program.cs
Engine.Core/: Component.cs  Engine.Core.csproj  IParticle.cs  IRay.cs  LCS3Element.cs  Layer.cs  Object3D.cs  Particle.cs  Pixel.cs  Ray.cs
Engine.Display/: Engine.csproj  Program.cs
Engine.Rendering/: Color.cs  Engine.Rendering.csproj  RenderImage.cs  RenderTexture.cs  RenderingConstants.cs
Engine/Engine/Maths/: LCS.cs  Straight.cs  Vector.cs
Engine/Maths/: GCS.cs  Mathf.cs
Engine/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Engine/UI/: Main.Designer.cs  Main.cs
Engine/include/Core/: NotImplementedException.h
Engine/include/Core/Events/: Event.h  EventTs.h
Engine/include/Core/Maths/: Enums.h  FloatEnumerator.h  Interval.h  Limits.h  Mathf.h  Set.h  Vector.h  Vector3.h
Engine/include/namespaces/: Core.h  Events.h  Maths.h
Engine/src/Core/Events/: Event.cpp  EventTs.cpp
Engine/src/Core/Maths/: FloatEnumerator.cpp  Interval.cpp  Limits.cpp  Vector.cpp  Vector3.cpp
Engine/src/Core/Maths/Mathf/: Mathf.cpp  Set.cpp
docs/: index.html
(+113 files in other folders)
